--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,22 @@
+* {
+  box-sizing: border-box;
+  margin: 0px;
+}
+html {
+  height: 100%;
+  width: 100%;
+}
+
 body {
-  margin: 0;
-  height:100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  height: 100%;
+  font-family: "Roboto", sans-serif;
+}
+
+#root {
+  height: 100%;
+  width: 100%;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: "Roboto", sans-serif;
 }
